package main

import (
	"encoding/json"
	"flag"
	"fmt"
	"os"
	"strings"

	"github.com/weisyn/v1/configs"
	"github.com/weisyn/v1/internal/app"
	"github.com/weisyn/v1/pkg/types"
	runtimeutil "github.com/weisyn/v1/pkg/utils/runtime"
)

const (
	version = "1.0.0"
)

func main() {
	// æ·»åŠ  panic recoveryï¼Œç¡®ä¿ä»»ä½• panic éƒ½èƒ½è¢«æ•è·
	defer func() {
		if r := recover(); r != nil {
			fmt.Fprintf(os.Stderr, "\nâŒ [PANIC] ç¨‹åºå‘ç”Ÿä¸¥é‡é”™è¯¯: %v\n", r)
			os.Stderr.Sync()
			// æ‰“å°å †æ ˆä¿¡æ¯
			fmt.Fprintf(os.Stderr, "è¯·æ£€æŸ¥é…ç½®å’Œä¾èµ–æ˜¯å¦æ­£ç¡®\n")
			os.Exit(1)
		}
	}()

	// ç«‹å³è¾“å‡ºï¼Œç¡®ä¿ç¨‹åºå¼€å§‹æ‰§è¡Œ
	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] ç¨‹åºå¼€å§‹æ‰§è¡Œï¼Œå‚æ•°: %v\n", os.Args)
	os.Stderr.Sync() // å¼ºåˆ¶åˆ·æ–°è¾“å‡º

	// å¼ºåˆ¶è¾“å‡ºåˆ°æ ‡å‡†è¾“å‡ºï¼Œç¡®ä¿èƒ½çœ‹åˆ°
	fmt.Println("ğŸš€ weisyn-node å¯åŠ¨ä¸­...")
	os.Stdout.Sync()

	// æ£€æŸ¥æ˜¯å¦æ˜¯å­å‘½ä»¤ï¼ˆä¾‹å¦‚ï¼šchain initï¼‰
	if len(os.Args) > 1 && os.Args[1] == "chain" {
		if len(os.Args) > 2 && os.Args[2] == "init" {
			fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] æ‰§è¡Œå­å‘½ä»¤: chain init\n")
			os.Stderr.Sync()
			chainInitCommand(os.Args[3:])
			return
		}
	}

	var (
		chainMode       string // é“¾æ¨¡å¼ï¼špublic | consortium | private
		configPath      string // ç”¨æˆ·é…ç½®æ–‡ä»¶è·¯å¾„ï¼ˆè”ç›Ÿé“¾/ç§é“¾å¿…éœ€ï¼‰
		httpPort        int    // HTTPç«¯å£ï¼ˆèŠ‚ç‚¹çº§è¦†ç›–ï¼‰
		grpcPort        int    // gRPCç«¯å£ï¼ˆèŠ‚ç‚¹çº§è¦†ç›–ï¼‰
		diagnosticsPort int    // è¯Šæ–­ç«¯å£ï¼ˆèŠ‚ç‚¹çº§è¦†ç›–ï¼‰
		dataDir         string // æ•°æ®ç›®å½•ï¼ˆèŠ‚ç‚¹çº§è¦†ç›–ï¼‰
		showHelp        bool   // æ˜¾ç¤ºå¸®åŠ©
		showVersion     bool   // æ˜¾ç¤ºç‰ˆæœ¬
	)

	flag.StringVar(&chainMode, "chain", "", "é“¾æ¨¡å¼ï¼špublicï¼ˆå…¬é“¾ï¼‰| consortiumï¼ˆè”ç›Ÿé“¾ï¼‰| privateï¼ˆç§é“¾ï¼‰")
	flag.StringVar(&configPath, "config", "", "é…ç½®æ–‡ä»¶è·¯å¾„ï¼ˆè”ç›Ÿé“¾/ç§é“¾å¿…éœ€ï¼Œå…¬é“¾ä¸éœ€è¦ï¼‰")
	flag.IntVar(&httpPort, "http-port", 0, "HTTPç«¯å£ï¼ˆèŠ‚ç‚¹çº§è¦†ç›–ï¼Œä¸å½±å“é“¾çº§é…ç½®ï¼‰")
	flag.IntVar(&grpcPort, "grpc-port", 0, "gRPCç«¯å£ï¼ˆèŠ‚ç‚¹çº§è¦†ç›–ï¼Œä¸å½±å“é“¾çº§é…ç½®ï¼‰")
	flag.IntVar(&diagnosticsPort, "diagnostics-port", 0, "è¯Šæ–­HTTPç«¯å£ï¼ˆèŠ‚ç‚¹çº§è¦†ç›–ï¼Œä¸å½±å“é“¾çº§é…ç½®ï¼Œç”¨äºpprof/diagnosticsï¼‰")
	flag.StringVar(&dataDir, "data-dir", "", "æ•°æ®ç›®å½•ï¼ˆèŠ‚ç‚¹çº§è¦†ç›–ï¼Œä¸å½±å“é“¾çº§é…ç½®ï¼‰")
	flag.BoolVar(&showHelp, "help", false, "æ˜¾ç¤ºå¸®åŠ©ä¿¡æ¯")
	flag.BoolVar(&showVersion, "version", false, "æ˜¾ç¤ºç‰ˆæœ¬ä¿¡æ¯")
	flag.Parse()

	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] å‚æ•°è§£æå®Œæˆ: chain=%s, config=%s\n", chainMode, configPath)
	os.Stderr.Sync()

	// æ˜¾ç¤ºç‰ˆæœ¬
	if showVersion {
		fmt.Printf("weisyn-node v%s\n", version)
		return
	}

	// æ˜¾ç¤ºå¸®åŠ©
	if showHelp {
		showHelpInfo()
		return
	}

	// éªŒè¯é“¾æ¨¡å¼
	if chainMode == "" {
		fmt.Println("âŒ é”™è¯¯: å¿…é¡»æŒ‡å®š --chain å‚æ•°")
		fmt.Println("ğŸ’¡ ä½¿ç”¨ --help æŸ¥çœ‹å¸®åŠ©ä¿¡æ¯")
		os.Exit(1)
	}

	chainMode = strings.ToLower(chainMode)
	// mainnet æ˜¯ public çš„åˆ«åï¼Œç»Ÿä¸€è½¬æ¢ä¸º public
	if chainMode == "mainnet" {
		chainMode = "public"
	}
	if chainMode != "public" && chainMode != "consortium" && chainMode != "private" {
		fmt.Printf("âŒ é”™è¯¯: æ— æ•ˆçš„é“¾æ¨¡å¼ '%s'\n", chainMode)
		fmt.Println("ğŸ’¡ æœ‰æ•ˆé€‰é¡¹: public | mainnet | consortium | private")
		fmt.Println("   - public/mainnet: å…¬æœ‰é“¾æ¨¡å¼ï¼ˆ--chain public ä½¿ç”¨å…¬å…±æµ‹è¯•ç½‘ï¼Œ--chain public --config <path> ä½¿ç”¨è‡ªå»ºå…¬é“¾ï¼‰")
		fmt.Println("   - consortium: è”ç›Ÿé“¾æ¨¡å¼ï¼ˆå¿…é¡»æä¾› --configï¼‰")
		fmt.Println("   - private: ç§æœ‰é“¾æ¨¡å¼ï¼ˆå¿…é¡»æä¾› --configï¼‰")
		os.Exit(1)
	}

	// æ ¹æ®é“¾æ¨¡å¼åŠ è½½é…ç½®
	var configData []byte
	var configSource string

	switch chainMode {
	case "public", "mainnet":
		// å…¬é“¾æ¨¡å¼ï¼š
		// - --chain publicï¼ˆæ—  --configï¼‰â†’ å…¬å…±æµ‹è¯•ç½‘ï¼ˆå†…åµŒé…ç½®ï¼Œtest-public-demoï¼‰
		// - --chain public --config <path> â†’ è‡ªå»ºå…¬é“¾ï¼ˆç”¨æˆ·é…ç½®ï¼‰
		if configPath == "" {
			// å…¬å…±æµ‹è¯•ç½‘ï¼šä½¿ç”¨å†…åµŒé…ç½®
			configData = configs.GetPublicChainConfig()
			configSource = "å†…åµŒå…¬é“¾é…ç½®ï¼ˆå…¬å…±æµ‹è¯•ç½‘ test-public-demoï¼‰"
		} else {
			// è‡ªå»ºå…¬é“¾ï¼šè¯»å–ç”¨æˆ·é…ç½®æ–‡ä»¶
			data, err := os.ReadFile(configPath)
			if err != nil {
				fmt.Printf("âŒ è¯»å–é…ç½®æ–‡ä»¶å¤±è´¥: %v\n", err)
				os.Exit(1)
			}
			configData = data
			configSource = configPath

			// éªŒè¯é…ç½®æ–‡ä»¶ä¸­çš„ chain_mode å¿…é¡»ä¸º "public"
			if err := validateChainModeInConfig(configData, "public"); err != nil {
				fmt.Printf("âŒ é…ç½®æ–‡ä»¶éªŒè¯å¤±è´¥: %v\n", err)
				fmt.Println("ğŸ’¡ è‡ªå»ºå…¬é“¾çš„é…ç½®æ–‡ä»¶ä¸­ network.chain_mode å¿…é¡»ä¸º \"public\"")
				os.Exit(1)
			}
		}

	case "consortium", "private":
		// è”ç›Ÿé“¾/ç§é“¾ï¼šå¿…é¡»æä¾›é…ç½®æ–‡ä»¶
		if configPath == "" {
			fmt.Printf("âŒ é”™è¯¯: %sé“¾æ¨¡å¼å¿…é¡»é€šè¿‡ --config æŒ‡å®šé…ç½®æ–‡ä»¶\n", chainMode)
			fmt.Println("ğŸ’¡ ä½¿ç”¨ä»¥ä¸‹å‘½ä»¤ç”Ÿæˆé…ç½®æ–‡ä»¶æ¨¡æ¿ï¼š")
			fmt.Printf("   weisyn-node chain init --mode %s --out ./my-%s-chain.json\n", chainMode, chainMode)
			os.Exit(1)
		}

		// è¯»å–ç”¨æˆ·é…ç½®æ–‡ä»¶
		data, err := os.ReadFile(configPath)
		if err != nil {
			fmt.Printf("âŒ è¯»å–é…ç½®æ–‡ä»¶å¤±è´¥: %v\n", err)
			os.Exit(1)
		}
		configData = data
		configSource = configPath

		// éªŒè¯é…ç½®æ–‡ä»¶ä¸­çš„ chain_mode æ˜¯å¦åŒ¹é…
		if err := validateChainModeInConfig(configData, chainMode); err != nil {
			fmt.Printf("âŒ é…ç½®æ–‡ä»¶éªŒè¯å¤±è´¥: %v\n", err)
			os.Exit(1)
		}
	}

	// è§£æé…ç½®
	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] å¼€å§‹è§£æé…ç½®ï¼Œé…ç½®æ•°æ®é•¿åº¦: %d å­—èŠ‚\n", len(configData))
	os.Stderr.Sync()

	var appConfig types.AppConfig
	if err := json.Unmarshal(configData, &appConfig); err != nil {
		fmt.Fprintf(os.Stderr, "âŒ è§£æé…ç½®æ–‡ä»¶å¤±è´¥: %v\n", err)
		previewLen := 100
		if len(configData) < previewLen {
			previewLen = len(configData)
		}
		fmt.Fprintf(os.Stderr, "é…ç½®æ•°æ®å‰%då­—èŠ‚: %s\n", previewLen, string(configData[:previewLen]))
		os.Stderr.Sync()
		os.Exit(1)
	}

	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] é…ç½®è§£ææˆåŠŸ\n")
	os.Stderr.Sync()

	// éªŒè¯é…ç½®æ–‡ä»¶ä¸­å¿…é¡»åŒ…å« environment å­—æ®µ
	if appConfig.Environment == nil || *appConfig.Environment == "" {
		if chainMode == "public" {
			fmt.Println("âŒ é”™è¯¯: å†…åµŒå…¬é“¾é…ç½®ç¼ºå°‘ environment å­—æ®µ")
			fmt.Println("ğŸ’¡ è¿™æ˜¯å†…éƒ¨é”™è¯¯ï¼Œè¯·æŠ¥å‘Šç»™å¼€å‘å›¢é˜Ÿ")
		} else {
			fmt.Printf("âŒ é”™è¯¯: é…ç½®æ–‡ä»¶ç¼ºå°‘ environment å­—æ®µ\n")
			fmt.Println("ğŸ’¡ è¯·åœ¨é…ç½®æ–‡ä»¶ä¸­æ·»åŠ  environment å­—æ®µï¼ˆdev | test | prodï¼‰")
			fmt.Println("ğŸ’¡ ç¤ºä¾‹:")
			fmt.Println(`   {
     "environment": "prod",
     "network": { ... }
   }`)
		}
		os.Exit(1)
	}

	// éªŒè¯ environment å­—æ®µå€¼
	envValue := strings.ToLower(*appConfig.Environment)
	if envValue != "dev" && envValue != "test" && envValue != "prod" {
		fmt.Printf("âŒ é”™è¯¯: é…ç½®æ–‡ä»¶ä¸­çš„ environment å­—æ®µå€¼æ— æ•ˆ: %s\n", *appConfig.Environment)
		fmt.Println("ğŸ’¡ æœ‰æ•ˆé€‰é¡¹: dev | test | prod")
		os.Exit(1)
	}

	// åº”ç”¨èŠ‚ç‚¹çº§è¦†ç›–ï¼ˆç«¯å£ã€æ•°æ®ç›®å½•ï¼‰
	if err := applyNodeOverrides(&appConfig, httpPort, grpcPort, diagnosticsPort, dataDir); err != nil {
		fmt.Printf("âŒ åº”ç”¨èŠ‚ç‚¹çº§é…ç½®å¤±è´¥: %v\n", err)
		os.Exit(1)
	}

	// éªŒè¯é…ç½®
	if err := validateConfig(&appConfig, chainMode); err != nil {
		fmt.Printf("âŒ é…ç½®éªŒè¯å¤±è´¥: %v\n", err)
		os.Exit(1)
	}

	// æ³¨æ„ï¼šå¼€æºä»“åº“å†…åµŒçš„æ˜¯æµ‹è¯•ç½‘é…ç½®ï¼ˆtest-public-demoï¼‰ï¼Œä¸å†å†…åµŒç”Ÿäº§ä¸»ç½‘é…ç½®
	// å¦‚éœ€è¿æ¥ç”Ÿäº§ä¸»ç½‘ï¼Œè¯·é€šè¿‡ BaaS æˆ–è¿ç»´å·¥å…·è·å–ç”Ÿäº§é…ç½®
	// å› æ­¤ä¸å†è¿›è¡Œ"å®˜æ–¹ä¸»ç½‘èº«ä»½"æ ¡éªŒ

	// é‡æ–°åºåˆ—åŒ–ä¸ºJSONï¼ˆç”¨äºå†…åµŒé…ç½®ï¼‰
	finalConfigData, err := json.Marshal(&appConfig)
	if err != nil {
		fmt.Printf("âŒ åºåˆ—åŒ–é…ç½®å¤±è´¥: %v\n", err)
		os.Exit(1)
	}

	// è¾“å‡ºå¯åŠ¨ä¿¡æ¯
	fmt.Printf("ğŸš€ æ­£åœ¨å¯åŠ¨ weisyn-node\n")
	fmt.Printf("   é“¾æ¨¡å¼: %s\n", chainMode)
	fmt.Printf("   è¿è¡Œç¯å¢ƒ: %s\n", *appConfig.Environment)
	fmt.Printf("   é…ç½®æ¥æº: %s\n", configSource)

	// ğŸ›¡ï¸ è¾“å‡º network_namespace æ‘˜è¦ä¿¡æ¯ï¼ˆç”¨äºéªŒè¯éš”ç¦»ï¼‰
	if appConfig.Network != nil && appConfig.Network.NetworkNamespace != nil {
		namespace := *appConfig.Network.NetworkNamespace
		fmt.Printf("   ğŸ“¡ ç½‘ç»œå‘½åç©ºé—´: %s\n", namespace)
		fmt.Printf("      - åè®® ID å‰ç¼€: /weisyn/%s/\n", namespace)
		fmt.Printf("      - DHT å‰ç¼€: /weisyn/%s\n", namespace)
		fmt.Printf("      - Gossip ä¸»é¢˜å‰ç¼€: weisyn.%s.\n", namespace)
		fmt.Printf("      - Rendezvous namespace: weisyn-%s\n", namespace)
		fmt.Printf("      - mDNS æœåŠ¡å: weisyn-node-%s\n", namespace)
	} else {
		fmt.Printf("   âš ï¸  è­¦å‘Š: network_namespace æœªé…ç½®ï¼Œå¯èƒ½å¯¼è‡´ç½‘ç»œéš”ç¦»å¤±è´¥\n")
	}

	os.Stdout.Sync() // å¼ºåˆ¶åˆ·æ–°è¾“å‡º

	// âœ… å®¹å™¨å†…å­˜ä¸Šé™è‡ªåŠ¨æ„ŸçŸ¥ï¼šé¿å… Go å †æ— é™å¢é•¿åè¢« cgroup OOM killer ç›´æ¥æ€æ­»
	if applied, limit, err := runtimeutil.ApplyCgroupMemoryLimit(0.80); err != nil {
		fmt.Fprintf(os.Stderr, "âš ï¸  [MEMLIMIT] è‡ªåŠ¨è®¾ç½® GOMEMLIMIT å¤±è´¥: %v\n", err)
		os.Stderr.Sync()
	} else if applied {
		fmt.Fprintf(os.Stderr, "âœ… [MEMLIMIT] å·²è‡ªåŠ¨åº”ç”¨ cgroup å†…å­˜ä¸Šé™: limit=%d bytes (ratio=0.80)\n", limit)
		os.Stderr.Sync()
	}

	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] å‡†å¤‡è°ƒç”¨ app.Start()\n")
	os.Stderr.Sync()

	// å¯åŠ¨èŠ‚ç‚¹
	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] å‡†å¤‡åˆ›å»ºå¯åŠ¨é€‰é¡¹\n")
	os.Stderr.Sync()

	startOptions := []app.Option{
		app.WithEmbeddedConfig(finalConfigData),
		app.WithAPI(), // å¯ç”¨API
	}

	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] è°ƒç”¨ app.Start()ï¼Œé…ç½®æ•°æ®é•¿åº¦: %d å­—èŠ‚\n", len(finalConfigData))
	os.Stderr.Sync()

	nodeApp, err := app.Start(startOptions...)
	if err != nil {
		fmt.Fprintf(os.Stderr, "âŒ èŠ‚ç‚¹å¯åŠ¨å¤±è´¥: %v\n", err)
		os.Stderr.Sync()
		// å°è¯•è¾“å‡ºæ›´è¯¦ç»†çš„é”™è¯¯ä¿¡æ¯
		if errStr := err.Error(); errStr != "" {
			fmt.Fprintf(os.Stderr, "é”™è¯¯è¯¦æƒ…: %s\n", errStr)
			os.Stderr.Sync()
		}
		os.Exit(1)
	}

	if nodeApp == nil {
		fmt.Fprintf(os.Stderr, "âŒ èŠ‚ç‚¹å¯åŠ¨å¤±è´¥: app.Start() è¿”å›äº† nil\n")
		os.Stderr.Sync()
		os.Exit(1)
	}

	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] app.Start() æˆåŠŸï¼Œå‡†å¤‡è°ƒç”¨ Wait()\n")
	os.Stderr.Sync()

	// âœ… èŠ‚ç‚¹å¯åŠ¨æˆåŠŸï¼Œè¾“å‡ºæ‘˜è¦ä¿¡æ¯
	fmt.Println("âœ… èŠ‚ç‚¹å¯åŠ¨æˆåŠŸï¼")
	if appConfig.Network != nil && appConfig.Network.NetworkNamespace != nil {
		namespace := *appConfig.Network.NetworkNamespace
		fmt.Printf("ğŸ“¡ å½“å‰èŠ‚ç‚¹ç½‘ç»œå‘½åç©ºé—´: %s\n", namespace)
		fmt.Printf("   ğŸ’¡ æç¤º: åªæœ‰ç›¸åŒ namespace çš„èŠ‚ç‚¹æ‰èƒ½ç›¸äº’å‘ç°å’Œé€šä¿¡\n")
	}
	os.Stdout.Sync()

	// ç­‰å¾…é€€å‡ºä¿¡å·
	fmt.Fprintf(os.Stderr, "ğŸ” [DEBUG] è°ƒç”¨ nodeApp.Wait()ï¼Œç¨‹åºå°†é˜»å¡ç­‰å¾…ä¿¡å·\n")
	os.Stderr.Sync()
	nodeApp.Wait()
}

// validateChainModeInConfig éªŒè¯é…ç½®æ–‡ä»¶ä¸­çš„ chain_mode æ˜¯å¦åŒ¹é…
func validateChainModeInConfig(configData []byte, expectedMode string) error {
	var configMap map[string]interface{}
	if err := json.Unmarshal(configData, &configMap); err != nil {
		return fmt.Errorf("è§£æé…ç½®æ–‡ä»¶å¤±è´¥: %w", err)
	}

	network, ok := configMap["network"].(map[string]interface{})
	if !ok {
		return fmt.Errorf("é…ç½®æ–‡ä»¶ç¼ºå°‘ network å­—æ®µ")
	}

	chainMode, ok := network["chain_mode"].(string)
	if !ok {
		return fmt.Errorf("é…ç½®æ–‡ä»¶ network.chain_mode å­—æ®µç¼ºå¤±æˆ–æ— æ•ˆ")
	}

	chainMode = strings.ToLower(chainMode)
	if chainMode != expectedMode {
		return fmt.Errorf("é…ç½®æ–‡ä»¶ä¸­çš„ chain_mode (%s) ä¸å‘½ä»¤è¡Œå‚æ•° (%s) ä¸åŒ¹é…", chainMode, expectedMode)
	}

	return nil
}

// applyNodeOverrides åº”ç”¨èŠ‚ç‚¹çº§è¦†ç›–é…ç½®ï¼ˆç«¯å£ã€æ•°æ®ç›®å½•ç­‰ï¼‰
func applyNodeOverrides(appConfig *types.AppConfig, httpPort, grpcPort, diagnosticsPort int, dataDir string) error {
	// è¦†ç›–HTTPç«¯å£
	if httpPort > 0 {
		if appConfig.API == nil {
			appConfig.API = &types.UserAPIConfig{}
		}
		port := httpPort
		appConfig.API.HTTPPort = &port
	}

	// è¦†ç›–gRPCç«¯å£
	if grpcPort > 0 {
		if appConfig.API == nil {
			appConfig.API = &types.UserAPIConfig{}
		}
		port := grpcPort
		appConfig.API.GRPCPort = &port
	}

	// è¦†ç›–è¯Šæ–­ç«¯å£
	if diagnosticsPort > 0 {
		if appConfig.Node == nil {
			appConfig.Node = &types.UserNodeConfig{}
		}
		if appConfig.Node.Host == nil {
			appConfig.Node.Host = &types.UserHostConfig{}
		}
		port := diagnosticsPort
		appConfig.Node.Host.DiagnosticsPort = &port
	}

	// è¦†ç›–æ•°æ®æ ¹ç›®å½•ï¼ˆdata_rootï¼‰
	if dataDir != "" {
		if appConfig.Storage == nil {
			appConfig.Storage = &types.UserStorageConfig{}
		}
		appConfig.Storage.DataRoot = &dataDir
	}

	return nil
}

// validateConfig éªŒè¯é…ç½®
func validateConfig(appConfig *types.AppConfig, chainMode string) error {
	// éªŒè¯ chain_mode
	if appConfig.Network == nil || appConfig.Network.ChainMode == nil {
		return fmt.Errorf("é…ç½®ç¼ºå°‘ network.chain_mode å­—æ®µ")
	}

	configChainMode := strings.ToLower(*appConfig.Network.ChainMode)
	if configChainMode != chainMode {
		return fmt.Errorf("é…ç½®ä¸­çš„ chain_mode (%s) ä¸å‘½ä»¤è¡Œå‚æ•° (%s) ä¸åŒ¹é…", configChainMode, chainMode)
	}

	// å…¬é“¾æ¨¡å¼ï¼šéªŒè¯ä¸å…è®¸ä¿®æ”¹çš„é“¾çº§å‚æ•°
	if chainMode == "public" {
		// å…¬é“¾çš„é“¾çº§å‚æ•°ç”±å†…åµŒé…ç½®é”å®šï¼Œç”¨æˆ·ä¸èƒ½ä¿®æ”¹
		// è¿™é‡Œå¯ä»¥æ·»åŠ æ›´å¤šéªŒè¯é€»è¾‘ï¼Œç¡®ä¿ç”¨æˆ·æ²¡æœ‰ä¿®æ”¹é“¾çº§å‚æ•°
		// ä¾‹å¦‚ï¼šchain_idã€genesisã€network_namespace ç­‰å¿…é¡»ä¸å†…åµŒé…ç½®ä¸€è‡´
		// æ³¨æ„ï¼šç”±äºå…¬é“¾ä½¿ç”¨å†…åµŒé…ç½®ï¼Œè¿™é‡Œä¸»è¦éªŒè¯ç¯å¢ƒé…ç½®æ˜¯å¦æ­£ç¡®åº”ç”¨
	}

	// è”ç›Ÿé“¾/ç§é“¾æ¨¡å¼ï¼šéªŒè¯å¿…éœ€å­—æ®µ
	if chainMode == "consortium" || chainMode == "private" {
		if appConfig.Network.ChainID == nil {
			return fmt.Errorf("è”ç›Ÿé“¾/ç§é“¾é…ç½®å¿…é¡»åŒ…å« network.chain_id")
		}
		if appConfig.Network.NetworkID == nil || *appConfig.Network.NetworkID == "" {
			return fmt.Errorf("è”ç›Ÿé“¾/ç§é“¾é…ç½®å¿…é¡»åŒ…å« network.network_id")
		}
		if appConfig.Network.NetworkNamespace == nil || *appConfig.Network.NetworkNamespace == "" {
			return fmt.Errorf("è”ç›Ÿé“¾/ç§é“¾é…ç½®å¿…é¡»åŒ…å« network.network_namespace")
		}
		if appConfig.Genesis == nil || appConfig.Genesis.Timestamp == 0 {
			return fmt.Errorf("è”ç›Ÿé“¾/ç§é“¾é…ç½®å¿…é¡»åŒ…å« genesis.timestampï¼ˆå¿…é¡»å¤§äº0ï¼‰")
		}
		if len(appConfig.Genesis.Accounts) == 0 {
			return fmt.Errorf("è”ç›Ÿé“¾/ç§é“¾é…ç½®å¿…é¡»åŒ…å«è‡³å°‘ä¸€ä¸ª genesis.accounts")
		}

		// éªŒè¯åˆ›ä¸–è´¦æˆ·å¿…éœ€å­—æ®µ
		for i, account := range appConfig.Genesis.Accounts {
			if account.Address == "" {
				return fmt.Errorf("åˆ›ä¸–è´¦æˆ·[%d]ç¼ºå°‘ address å­—æ®µ", i)
			}
			if account.InitialBalance == "" {
				return fmt.Errorf("åˆ›ä¸–è´¦æˆ·[%d]ç¼ºå°‘ initial_balance å­—æ®µ", i)
			}
		}

		// è”ç›Ÿé“¾ç‰¹å®šéªŒè¯
		if chainMode == "consortium" {
			if appConfig.Node == nil || appConfig.Node.BootstrapPeers == nil || len(appConfig.Node.BootstrapPeers) == 0 {
				fmt.Println("âš ï¸  è­¦å‘Š: è”ç›Ÿé“¾é…ç½®ç¼ºå°‘ bootstrap_peersï¼Œå»ºè®®é…ç½®è‡³å°‘ä¸€ä¸ªå¼•å¯¼èŠ‚ç‚¹")
			}
		}
	}

	// éªŒè¯é“¾æ¨¡å¼ä¸€è‡´æ€§ï¼ˆchain_mode vs security.permission_model vs security.access_control.modeï¼‰
	if err := validateChainModeConsistency(appConfig, chainMode); err != nil {
		return err
	}

	// éªŒè¯ mining.enable_aggregator çº¦æŸ
	if err := validateMiningAggregatorConstraint(appConfig, chainMode, *appConfig.Environment); err != nil {
		return err
	}

	return nil
}

// validateChainModeConsistency éªŒè¯é“¾æ¨¡å¼ä¸€è‡´æ€§
// éªŒè¯ chain_modeã€security.permission_modelã€security.access_control.mode çš„ä¸€è‡´æ€§
func validateChainModeConsistency(appConfig *types.AppConfig, chainMode string) error {
	// éªŒè¯ security.permission_model ä¸ chain_mode ä¸€è‡´
	if appConfig.Security != nil && appConfig.Security.PermissionModel != nil {
		permissionModel := strings.ToLower(*appConfig.Security.PermissionModel)
		if permissionModel != chainMode {
			return fmt.Errorf("é…ç½®ä¸ä¸€è‡´: security.permission_model (%s) ä¸ network.chain_mode (%s) ä¸åŒ¹é…", permissionModel, chainMode)
		}
	}

	// éªŒè¯ security.access_control.mode ä¸ chain_mode ä¸€è‡´
	if appConfig.Security != nil && appConfig.Security.AccessControl != nil && appConfig.Security.AccessControl.Mode != nil {
		accessControlMode := strings.ToLower(*appConfig.Security.AccessControl.Mode)
		var expectedMode string
		switch chainMode {
		case "public":
			expectedMode = "open"
		case "consortium":
			expectedMode = "allowlist"
		case "private":
			expectedMode = "psk"
		default:
			return fmt.Errorf("æœªçŸ¥çš„é“¾æ¨¡å¼: %s", chainMode)
		}

		if accessControlMode != expectedMode {
			return fmt.Errorf("é…ç½®ä¸ä¸€è‡´: security.access_control.mode (%s) ä¸ network.chain_mode (%s) ä¸åŒ¹é…ï¼Œåº”ä¸º %s", accessControlMode, chainMode, expectedMode)
		}
	}

	// éªŒè¯ node.host.gater.mode ä¸ chain_mode ä¸€è‡´
	if appConfig.Node != nil && appConfig.Node.Host != nil && appConfig.Node.Host.Gater != nil && appConfig.Node.Host.Gater.Mode != nil {
		gaterMode := strings.ToLower(*appConfig.Node.Host.Gater.Mode)
		var expectedGaterMode string
		switch chainMode {
		case "public":
			expectedGaterMode = "open"
		case "consortium", "private":
			expectedGaterMode = "allowlist"
		default:
			return fmt.Errorf("æœªçŸ¥çš„é“¾æ¨¡å¼: %s", chainMode)
		}

		if gaterMode != expectedGaterMode {
			return fmt.Errorf("é…ç½®ä¸ä¸€è‡´: node.host.gater.mode (%s) ä¸ network.chain_mode (%s) ä¸åŒ¹é…ï¼Œåº”ä¸º %s", gaterMode, chainMode, expectedGaterMode)
		}
	}

	// éªŒè¯é“¾æ¨¡å¼ç‰¹å®šçš„å®‰å…¨é…ç½®
	switch chainMode {
	case "consortium":
		// è”ç›Ÿé“¾åº”è¯¥æœ‰ certificate_management é…ç½®ï¼ˆå»ºè®®ï¼Œéå¼ºåˆ¶ï¼‰
		if appConfig.Security == nil || appConfig.Security.CertificateManagement == nil {
			fmt.Println("âš ï¸  è­¦å‘Š: è”ç›Ÿé“¾é…ç½®ç¼ºå°‘ security.certificate_managementï¼Œå»ºè®®é…ç½® CA è¯ä¹¦ç®¡ç†")
		}
		// è”ç›Ÿé“¾ä¸åº”è¯¥æœ‰ PSK é…ç½®
		if appConfig.Security != nil && appConfig.Security.PSK != nil {
			return fmt.Errorf("é…ç½®é”™è¯¯: è”ç›Ÿé“¾ä¸åº”è¯¥åŒ…å« security.psk é…ç½®")
		}

	case "private":
		// ç§æœ‰é“¾åº”è¯¥æœ‰ PSK é…ç½®ï¼ˆå»ºè®®ï¼Œéå¼ºåˆ¶ï¼‰
		if appConfig.Security == nil || appConfig.Security.PSK == nil || appConfig.Security.PSK.File == nil || *appConfig.Security.PSK.File == "" {
			fmt.Println("âš ï¸  è­¦å‘Š: ç§æœ‰é“¾é…ç½®ç¼ºå°‘ security.psk.fileï¼Œå»ºè®®é…ç½® PSK æ–‡ä»¶è·¯å¾„")
		}
		// ç§æœ‰é“¾ä¸åº”è¯¥æœ‰ certificate_management é…ç½®
		if appConfig.Security != nil && appConfig.Security.CertificateManagement != nil {
			return fmt.Errorf("é…ç½®é”™è¯¯: ç§æœ‰é“¾ä¸åº”è¯¥åŒ…å« security.certificate_management é…ç½®")
		}

	case "public":
		// å…¬æœ‰é“¾ä¸åº”è¯¥æœ‰ certificate_management æˆ– PSK é…ç½®
		if appConfig.Security != nil {
			if appConfig.Security.CertificateManagement != nil {
				return fmt.Errorf("é…ç½®é”™è¯¯: å…¬æœ‰é“¾ä¸åº”è¯¥åŒ…å« security.certificate_management é…ç½®")
			}
			if appConfig.Security.PSK != nil {
				return fmt.Errorf("é…ç½®é”™è¯¯: å…¬æœ‰é“¾ä¸åº”è¯¥åŒ…å« security.psk é…ç½®")
			}
		}
	}

	return nil
}

// validateMiningAggregatorConstraint éªŒè¯ mining.enable_aggregator çº¦æŸ
// æ ¹æ®é“¾æ¨¡å¼å’Œè¿è¡Œç¯å¢ƒéªŒè¯ enable_aggregator çš„å€¼æ˜¯å¦ç¬¦åˆçº¦æŸï¼š
// - public: ç”Ÿäº§/æµ‹è¯•ç¯å¢ƒå¿…é¡»ä¸º trueï¼Œå¼€å‘ç¯å¢ƒå…è®¸ falseï¼ˆå•èŠ‚ç‚¹æ¨¡å¼ï¼‰
// - consortium: ç”Ÿäº§/æµ‹è¯•ç¯å¢ƒå¿…é¡»ä¸º trueï¼Œå¼€å‘ç¯å¢ƒå…è®¸ falseï¼ˆå•èŠ‚ç‚¹æ¨¡å¼ï¼‰
// - private: å¯ä»¥ä¸º false æˆ– true
func validateMiningAggregatorConstraint(appConfig *types.AppConfig, chainMode string, environment string) error {
	if appConfig.Mining == nil || appConfig.Mining.EnableAggregator == nil {
		// æœªé…ç½®æ—¶ï¼Œæ ¹æ®é“¾æ¨¡å¼å’Œè¿è¡Œç¯å¢ƒè®¾ç½®é»˜è®¤å€¼
		switch chainMode {
		case "public", "consortium":
			// å¼€å‘ç¯å¢ƒå…è®¸ä¸é…ç½®ï¼ˆé»˜è®¤ä¸º falseï¼‰ï¼Œç”Ÿäº§/æµ‹è¯•ç¯å¢ƒå¿…é¡»æ˜¾å¼é…ç½®ä¸º true
			env := strings.ToLower(environment)
			if env != "dev" {
				return fmt.Errorf("é…ç½®é”™è¯¯: %sé“¾æ¨¡å¼åœ¨ %s ç¯å¢ƒå¿…é¡»æ˜¾å¼é…ç½® mining.enable_aggregator ä¸º true", chainMode, environment)
			}
			// å¼€å‘ç¯å¢ƒå…è®¸ä¸é…ç½®ï¼Œé»˜è®¤ä¸º falseï¼ˆå•èŠ‚ç‚¹æ¨¡å¼ï¼‰
			return nil
		case "private":
			// ç§æœ‰é“¾å…è®¸ä¸é…ç½®ï¼Œé»˜è®¤ä¸º false
			return nil
		default:
			return fmt.Errorf("æœªçŸ¥çš„é“¾æ¨¡å¼: %s", chainMode)
		}
	}

	enableAggregator := *appConfig.Mining.EnableAggregator
	env := strings.ToLower(environment)

	switch chainMode {
	case "public":
		// å¼€å‘ç¯å¢ƒå…è®¸ falseï¼ˆå•èŠ‚ç‚¹æ¨¡å¼ï¼‰ï¼Œç”Ÿäº§/æµ‹è¯•ç¯å¢ƒå¿…é¡»ä¸º true
		if !enableAggregator && env != "dev" {
			return fmt.Errorf("é…ç½®é”™è¯¯: å…¬æœ‰é“¾æ¨¡å¼åœ¨ %s ç¯å¢ƒ mining.enable_aggregator å¿…é¡»ä¸º trueï¼ˆç”Ÿäº§/æµ‹è¯•ç¯å¢ƒå¿…é¡»ä½¿ç”¨åˆ†å¸ƒå¼èšåˆå™¨ï¼‰", environment)
		}

	case "consortium":
		// å¼€å‘ç¯å¢ƒå…è®¸ falseï¼ˆå•èŠ‚ç‚¹æ¨¡å¼ï¼‰ï¼Œç”Ÿäº§/æµ‹è¯•ç¯å¢ƒå¿…é¡»ä¸º true
		if !enableAggregator && env != "dev" {
			return fmt.Errorf("é…ç½®é”™è¯¯: è”ç›Ÿé“¾æ¨¡å¼åœ¨ %s ç¯å¢ƒ mining.enable_aggregator å¿…é¡»ä¸º trueï¼ˆå¤šæœºæ„å…±è¯†éœ€è¦èšåˆå™¨ï¼‰", environment)
		}

	case "private":
		// ç§æœ‰é“¾å…è®¸ falseï¼ˆå•èŠ‚ç‚¹æ¨¡å¼ï¼‰æˆ– trueï¼ˆå¤šèŠ‚ç‚¹æ¨¡å¼ï¼‰
		// ä¸è¿›è¡Œå¼ºåˆ¶éªŒè¯

	default:
		return fmt.Errorf("æœªçŸ¥çš„é“¾æ¨¡å¼: %s", chainMode)
	}

	return nil
}

// showHelpInfo æ˜¾ç¤ºå¸®åŠ©ä¿¡æ¯
func showHelpInfo() {
	fmt.Println("weisyn-node - WES åŒºå—é“¾èŠ‚ç‚¹")
	fmt.Println()
	fmt.Println("ç”¨æ³•:")
	fmt.Println("  weisyn-node --chain <mode> [é€‰é¡¹]")
	fmt.Println()
	fmt.Println("é“¾æ¨¡å¼ï¼ˆå¿…éœ€ï¼‰:")
	fmt.Println("  --chain public      å…¬é“¾æ¨¡å¼")
	fmt.Println("                      - æ—  --configï¼šä½¿ç”¨å®˜æ–¹å…¬å…±æµ‹è¯•ç½‘ test-public-demoï¼ˆå†…åµŒ configs/chains/test-public-demo.jsonï¼‰")
	fmt.Println("                      - æœ‰ --configï¼šä½¿ç”¨è‡ªå»ºå…¬é“¾ï¼ˆç”¨æˆ·é…ç½®ï¼Œä¾‹å¦‚ configs/chains/dev-public-local.jsonï¼‰")
	fmt.Println("  --chain mainnet     å®˜æ–¹ä¸»ç½‘åˆ«åï¼ˆå½“å‰ç­‰åŒäº --chain publicï¼Œæ—  --configï¼ŒæŒ‡å‘å…¬å…±æµ‹è¯•ç½‘ï¼‰")
	fmt.Println("  --chain consortium  è”ç›Ÿé“¾æ¨¡å¼ï¼ˆå¿…é¡»æä¾› --configï¼‰")
	fmt.Println("  --chain private     ç§é“¾æ¨¡å¼ï¼ˆå¿…é¡»æä¾› --configï¼‰")
	fmt.Println()
	fmt.Println("é…ç½®æ–‡ä»¶:")
	fmt.Println("  --config <path>     é…ç½®æ–‡ä»¶è·¯å¾„")
	fmt.Println("                      - å…¬é“¾ï¼šå¯é€‰ï¼ˆæ— åˆ™ä½¿ç”¨å†…åµŒ test-public-demoï¼Œæœ‰åˆ™ä½¿ç”¨è‡ªå»ºå…¬é“¾ï¼‰")
	fmt.Println("                      - è”ç›Ÿé“¾/ç§é“¾ï¼šå¿…éœ€")
	fmt.Println()
	fmt.Println("èŠ‚ç‚¹çº§é…ç½®ï¼ˆå¯é€‰ï¼Œä¸å½±å“é“¾çº§é…ç½®ï¼‰:")
	fmt.Println("  --http-port <port>        HTTPç«¯å£ï¼ˆè¦†ç›–é…ç½®ä¸­çš„ http_portï¼Œç”¨äº REST/JSON-RPC/WebSocketï¼‰")
	fmt.Println("  --grpc-port <port>        gRPCç«¯å£ï¼ˆè¦†ç›–é…ç½®ä¸­çš„ grpc_portï¼‰")
	fmt.Println("  --diagnostics-port <port> è¯Šæ–­HTTPç«¯å£ï¼ˆè¦†ç›–é…ç½®ä¸­çš„ diagnostics_portï¼Œç”¨äº pprof/diagnosticsï¼‰")
	fmt.Println("  --data-dir <path>        æ•°æ®ç›®å½•ï¼ˆè¦†ç›–é…ç½®ä¸­çš„ data_rootï¼‰")
	fmt.Println()
	fmt.Println("å…¶ä»–é€‰é¡¹:")
	fmt.Println("  --help              æ˜¾ç¤ºæ­¤å¸®åŠ©ä¿¡æ¯")
	fmt.Println("  --version           æ˜¾ç¤ºç‰ˆæœ¬ä¿¡æ¯")
	fmt.Println()
	fmt.Println("ç¤ºä¾‹:")
	fmt.Println("  # å®˜æ–¹å…¬å…±æµ‹è¯•ç½‘ï¼ˆ0 é…ç½®ï¼Œenvironment ä»å†…åµŒ test-public-demo è¯»å–ï¼‰")
	fmt.Println("  weisyn-node --chain public")
	fmt.Println("  weisyn-node --chain mainnet  # å½“å‰ç­‰åŒäºä¸Šä¸€æ¡å‘½ä»¤")
	fmt.Println()
	fmt.Println("  # å…¬å…±æµ‹è¯•ç½‘ï¼ˆè¦†ç›– HTTP ç«¯å£ï¼‰")
	fmt.Println("  weisyn-node --chain public --http-port 28700")
	fmt.Println()
	fmt.Println("  # å…¬å…±æµ‹è¯•ç½‘ï¼ˆè¦†ç›–å¤šä¸ªç«¯å£ï¼Œé€‚é…æœ¬æœºç¯å¢ƒï¼‰")
	fmt.Println("  weisyn-node --chain public --http-port 28700 --grpc-port 28702 --diagnostics-port 28706")
	fmt.Println()
	fmt.Println("  # å…¬å…±æµ‹è¯•ç½‘ï¼ˆæŒ‡å®šç«¯å£ï¼‰")
	fmt.Println("  weisyn-node --chain public --http-port 28700")
	fmt.Println()
	fmt.Println("  # è‡ªå»ºå…¬é“¾å¼€å‘ç¯å¢ƒï¼ˆä¾‹å¦‚ dev-public-localï¼Œæœ¬åœ°å•æœºæŒ–çŸ¿ï¼‰")
	fmt.Println("  weisyn-node --chain public --config ./configs/chains/dev-public-local.json")
	fmt.Println()
	fmt.Println("  # è”ç›Ÿé“¾æ¨¡å¼ï¼ˆå¿…é¡»æä¾›é…ç½®ï¼Œé…ç½®æ–‡ä»¶ä¸­éœ€åŒ…å« environment å­—æ®µï¼‰")
	fmt.Println("  weisyn-node --chain consortium --config ./my-consortium.json")
	fmt.Println()
	fmt.Println("  # ç§é“¾æ¨¡å¼ï¼ˆå¿…é¡»æä¾›é…ç½®ï¼Œé…ç½®æ–‡ä»¶ä¸­éœ€åŒ…å« environment å­—æ®µï¼‰")
	fmt.Println("  weisyn-node --chain private --config ./my-private.json")
	fmt.Println()
	fmt.Println("ç”Ÿæˆé…ç½®æ–‡ä»¶æ¨¡æ¿:")
	fmt.Println("  weisyn-node chain init --mode consortium --out ./my-consortium.json")
	fmt.Println("  weisyn-node chain init --mode private --out ./my-private.json")
	fmt.Println()
}
